gentoolkit 0.6.8_pre2:
   * Added support for 'missing keywords' in eupdate-unstable
